Bug 431542 - Touchscreen scrolling no longer works
Summary: Touchscreen scrolling no longer works
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.20.5
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-01-13 13:17 UTC by personalizedrefrigerator
Modified: 2021-01-19 15:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A screenshot of the sidebar (122.34 KB, image/png)
2021-01-13 14:14 UTC, personalizedrefrigerator
Details

Note You need to log in before you can comment on or make changes to this bug.
Description personalizedrefrigerator 2021-01-13 13:17:17 UTC
SUMMARY
After a recent update, touchscreen scrolling no longer works in system settings.

STEPS TO REPRODUCE
1. Open system settings.
2. Resize the window such that a scrollbar appears in the navigation pane.
3. Try to scroll this pane vertically, with a touchsceeen.

OBSERVED RESULT
It doesn't scroll.

EXPECTED RESULT
It should scroll vertically, as it used to.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: testing/bugfix packages (X11)
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Nicolas Fella 2021-01-13 14:04:11 UTC
Are you using the icons view or the sidebar view? If you're not sure please add a screenshot

What distro are you using?
Comment 2 personalizedrefrigerator 2021-01-13 14:14:34 UTC
Created attachment 134804 [details]
A screenshot of the sidebar
Comment 3 personalizedrefrigerator 2021-01-13 14:16:18 UTC
Oops! I'm running KDE Neon testing edition! On another device, with KDE Neon user edition, I don't experience the issue.
Comment 4 Nicolas Fella 2021-01-13 14:17:47 UTC
I can confirm that this is an issue on master but not on 5.20
Comment 5 Nicolas Fella 2021-01-13 14:27:42 UTC
The regression appears to be not in systemsettings itself but somewhere else
Comment 7 Nate Graham 2021-01-13 15:06:47 UTC
Darn, can reproduce.
Comment 8 Marco Martin 2021-01-19 15:42:06 UTC
Git commit 0ed544f138376d528956591235bd539add90e827 by Marco Martin.
Committed on 19/01/2021 at 15:33.
Pushed by mart into branch 'master'.

Don't consider Synthetized mouse events as Mouse

don't reset transient touch input if the mouse event
that just arrived is synthetized, as that event is still
actually a touch one

M  +8    -1    src/settings.cpp

https://invent.kde.org/frameworks/kirigami/commit/0ed544f138376d528956591235bd539add90e827