Don't consider Synthetized mouse events as Mouse

don't reset transient touch input if the mouse event
that just arrived is synthetized, as that event is still
actually a touch one

BUG:431542